--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -599,107 +599,107 @@ stories:
   domain: http://www.fauquier.com/
   link: https://www.fauquier.com/news/new-historical-markers-to-highlight-the-mellon-family-to-be/article_36cf4b48-9cd4-11e9-8dcf-03ce990026e5.html
 images:
-- name: aws-s3-square-file-00-00-24-99-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-24-99-square.jpg
-- name: status-berlin-status-berlin-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
-- name: gypsymosaic-gypsy-eyes-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-neo-instinct.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
-- name: carry-load-carryload-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crabapple.jpg
-- name: birdhouse-birdhouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
-- name: nyc-flag-nycflag-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-brush.jpg
-- name: rain-princess-DSC_0062.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0062.jpg
-- name: school-clouds-church-clouds-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dali-two.jpg
-- name: aws-s3-stories-containership-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-deep-connections.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
-- name: locked-up-steam-lock-up-steam-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-ww2-dresden.jpg
-- name: statue-of-liberty-front-view-statueofliberty-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-space-pizza.jpg
-- name: store-on-corner-store-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sand-paper.jpg
-- name: oldsmallboat-oldsmallboat-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-alien-goggles.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dark-soul.jpg
-- name: gypsy-wagon-gypsywagon-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dry-skin.jpg
-- name: old-gas-pumps-oldgaspumps-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-color.jpg
-- name: lincoln-memorial-lincolnmemorial-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-gred-mash.jpg
-- name: rockingchair-rockingchair-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crabapple.jpg
-- name: trucksilo-trucksilo-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-color.jpg
-- name: rockingchair-rockingchair-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crunch-paper.jpg
-- name: stories-new-oldbarn-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-oldbarn-dark-dali.jpg
-- name: meadowbutterfly-meadow-butterfly-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-atari-missle.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-rain.jpg
-- name: gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
-- name: oldroad-old-road-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-really-hot.jpg
-- name: trucksilo-trucksilo-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-dresden.jpg
-- name: crow_dali_three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dali_three.jpg
-- name: abandonedbuildings_neo_instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_neo_instinct.jpg
-- name: birdhouse-birdhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-dali.jpg
-- name: gears-4882162452-fa3126b38d-b-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-clean-view.jpg
-- name: rockingchair-rockingchair-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-monet-one.jpg
-- name: lincoln-memorial-lincolnmemorial-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-two.jpg
-- name: powerlines-power-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-dali.jpg
-- name: ellis-island-ellisisland-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-dream.jpg
-- name: walled-garden-walled-garden-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-nazi-poster.jpg
-- name: oldbarn-oldbarn-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-wols.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
-- name: old-barn-old-barn-1500-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-hot-spicy.jpg
-- name: bordercrossing-bordercrossing-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sunday.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
-- name: server-cloud-server-racks-door-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-5.jpg
-- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-- name: subway-subway-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-alberto-giacometti.jpg
-- name: old-granary-field-granaryfield-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-graham-sutherland.jpg
-- name: store-on-corner-oldcabin-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-paper.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-gred-mash.jpg
-- name: oldsmallboat-oldsmallboat-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-ww2-color.jpg
-- name: aws-s3-stories-new-52-175-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-52-175-800-500-0-max-0-1--1.jpg
+- name: carry-load-carryload-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dark-dali.jpg
+- name: amusement-park-amusement-park-2-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit.jpg
+- name: yuma-bank-yuma-bak-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crunch-paper.jpg
+- name: carry-load-carryload-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-brush.jpg
+- name: window-window-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-clean-view.jpg
+- name: status-berlin-status-berlin-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-colorful-blocks.jpg
+- name: school-clouds-church-clouds-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
+- name: curtain-curtain-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-deep-connections.jpg
+- name: fence-mexico-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purp-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-internet-numbers.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+- name: wind-mills-windmills-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-light-dali.jpg
+- name: miamibeach-miamibeach-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dry-skin.jpg
+- name: oldhousecars-house-old-cars-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-matrix.jpg
+- name: border-crossing-bordercrossing-neo-instinct.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-neo-instinct.png
+- name: dc-statue-dcstatue-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-bright-sand.jpg
+- name: bluelake-gan-vogh-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-01-17-38.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+- name: art-museum-art-museum-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-rain.jpg
+- name: copper-circuit-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7162.jpg
+- name: cannon-facing-cannon-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-copper-circuit.jpg
+- name: store-on-corner-store-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-electricity.jpg
+- name: nyc-flag-nycflag-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-rain.jpg
+- name: capital-battle-capitolbattle-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-rainbow-festival.jpg
+- name: death-valley-death-valley-national-park-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-atari-missle.jpg
+- name: downtown-los-angeles-downtown-la-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-feed-people.JPG
+- name: machine-road-machine-road-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-3.jpg
+- name: carry-load-carryload-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-smooth-ride.jpg
+- name: dc-statue-dcstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-monet-one.jpg
+- name: crow-crow-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-circuit.jpg
+- name: legal-statue-legalstatue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue.jpg
+- name: walled-garden-walled-garden-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-circuit.jpg
+- name: art-museum-art-museum-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-atari-asteroids.jpg
+- name: aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
+- name: server-racks-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-dark-dali.jpg
+- name: mistywoods-babyfoot-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-marcel-duchamp.jpg
+- name: old-gas-pumps-oldgaspumps-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-satan-red.jpg
+- name: store-on-corner-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crunch-paper.jpg
+- name: oldbarn-oldbarn-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-pablo-blue.jpg
+- name: server-cloud-server-racks-clouds-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-satan-red.jpg
+- name: oldhouse-granaryfield-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-pablo-blue.jpg
+- name: supreme-court-supremecourt-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purple-storm.jpg
+- name: oldhotel-oldhotel-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-pond.jpg
+- name: statue-of-liberty-front-view-statueofliberty-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-feed-people.jpg
+- name: downtheline-downtheline-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smooth-ride.jpg
+- name: scream-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_4833.jpg
+- name: legal-statue-legalstatue-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-cinnamon-rolls.jpg
+- name: old-church-oldchurch-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-colorful-dream.jpg
+- name: old-house-oldhouse-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-oily-mcoilface.jpg
+- name: ellis-island-ellis-island-room-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-sunday.jpg
+- name: curtain-curtain-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-green-zuma.jpg
 ---
 Payroll Hiring Moderates Slightly In May.&nbsp;Handley Grad Jackson Signs With German Professional Basketball Team.&nbsp;Iredell Posts Fourth Consecutive Victory.&nbsp;Rim Country Bowl Mackey's.&nbsp;Shooters Added And It Looks Like Noel's Staying.&nbsp;Jury To Decide SEAL's Punishment For Posing With Corpse.&nbsp;Idaho Shakespeare Festival's 'The Music Man'.&nbsp;Taylor Swift's Lawyer Insists She Wasn't Given Chance To Buy Music Outright.&nbsp;
